# testserver

./: .env  Cargo.toml
app/: Cargo.toml
app/src/: configuration.rs  db.rs  filesystem.rs  lib.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
app/src/auth/: client.rs  middleware.rs  mod.rs  password.rs
app/src/components/: mod.rs  navbar.rs  searchbar.rs
app/src/routes/: assets.rs  health_check.rs  home.rs  list.rs  login.rs  logout.rs  mod.rs  upload.rs
app/templates/: assets.stpl  home.stpl  list.stpl  login.stpl  nav-bar.stpl  search-bar.stpl  uploads.stpl
configuration/: app.yaml
entity/: Cargo.toml
entity/src/: asset.rs  entity_linked.rs  lib.rs  permissions.rs  prelude.rs  role.rs  roles_permissions.rs  test_role.rs  test_user.rs  user.rs  user_roles.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_asset_table.rs  m20230117_111156_asset_seed.rs  m20230119_102725_create_user_table.rs  m20230120_093120_user_seed.rs  m20230122_141730_create_roles_table.rs  m20230122_145143_create_user_roles_table.rs  m20230122_185614_role_seed.rs  m20230122_190717_admin_roles_seed.rs  m20230203_085353_add_test_roles.rs  m20230203_092546_add_test_users.rs  m20230203_102343_seed_test_user.rs  m20230203_142254_create_perms_table.rs  m20230203_143026_seed_perms_table.rs  m20230203_143748_create_roles_perms_table.rs  m20230203_144757_seed_roles_perms_table.rs
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  main.rs  startup.rs
