[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }

actix-web = "4"
config = { version = "0.13", default-features = false, features = ["yaml"] }
#sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
sea-orm = { version = "0.10", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.144"
serde-aux = "3.1.0"
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-actix-web = "0.6"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session", "cookie-session"] }
actix-multipart = "0.4.0"
sailfish = "0.5.0"
argon2 = { version = "0.4", features = ["std"] }
futures = "0.3"
once_cell = "1.17.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
rand = "0.8.5"